Riko Sakurauchi Love Spiral Update

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 <body>
     <h1>Riko Sakurauchi is a great singer. </h1>
     Riko Sakurauchi is also part of the sub-unit, Gulity Kiss, which has to be one of the best subunits ever created by Love Live.
-    Her voice is soft, consistent, and legato-like with a romantic, whispery flair. I would give her singing a solid 8/10. 
+    <p>Her voice is soft, consistent, and legato-like with a romantic, whispery flair. I would give her singing a solid 8/10. </p>
+
+    <p>Here's a cool song: <a href="https://www.youtube.com/watch?v=iyXhjyW3OFQ">Love Spiral Tower</a></p>
+    <p> Heres are some cool pictures of Riko Sakurauchi: <a href="pictures.html">Pictures</a></p>
 </body>
+
 
 
 </html>
